<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="50dp"
            android:text="Your personel yoga assistant"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tab_login"
                android:layout_width="146dp"
                android:layout_height="47dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_rectangle"
                android:padding="10dp"
                android:text="@string/login_tab"
                android:textColor="#ffffff"
                android:textSize="15sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/tab_register"
                android:layout_width="146dp"
                android:layout_height="47dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_rectangle"
                android:padding="10dp"
                android:text="@string/register_tab"
                android:textColor="#ffffff"
                android:textSize="15sp"
                style="?android:attr/borderlessButtonStyle"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <!--  Email Label -->
            <EditText
                android:id="@+id/loginemail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border_edittext"
                android:drawableStart="@drawable/ic_username"
                android:hint="@string/user_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background"/>

            <!--  Password Label -->
            <EditText
                android:id="@+id/loginpassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_border_edittext"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background"/>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="146dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="21dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#3FA9F5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:background="#b2b2b2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="or log in using" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:background="#b2b2b2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/google_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_google" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_facebook" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_linkedin" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:src="@drawable/ic_twitter" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">


                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border_edittext"
                    android:hint="First Name"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/background"
                    android:textColor="@color/background"/>

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_border_edittext"
                    android:hint="Last Name"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/background"
                    android:textColor="@color/background"/>
            </LinearLayout>

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border_edittext"
                android:hint="Enter your email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background"/>

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border_edittext"
                android:hint="Enter a string password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background"/>

            <EditText
                android:id="@+id/reg_pass_retype"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_border_edittext"
                android:hint="Retype your password"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/background"
                android:textColor="@color/background" />


            <Button
                android:id="@+id/bt_register"
                android:layout_width="146dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_rectangle"
                android:padding="10dp"
                android:text="@string/register_tab"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>